[package]
name = "yggy"
version = "0.0.0-alpha.1"
edition = "2018"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
description = "An end-to-end encrypted IPv6 mesh network"
readme = "README.md"
repository = "https://github.com/datalove-app/yggy"
keywords = ["cryptography", "networking", "p2p"]
categories = ["cryptography"]
license = "LGPL-3.0" # FIXME

[lib]
name = "yggy"
path = "src/lib.rs"

# TODO? restrict binary building to linux/mac/windows?
[[bin]]
name = "yggyd"
path = "bin/yggyd/main.rs"

[[bin]]
name = "yggyctl"
path = "bin/yggyctl/main.rs"

[[bin]]
name = "yggysim"
path = "bin/yggysim/main.rs"

[dependencies]
# main
anyhow = "1.0"
async-trait = "0.1"
boringtun = "0.3"
digest = "0.8.1"
ed25519-dalek = { version = "0.9", features = ["serde"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
# tokio = "0.2"
tun = { version = "0.5", features = ["async"] }
xactor = "0.6"
# helper, util
bitvec = { version = "0.17.4", default-features = false }
derive_more = "0.99"
ipnet = { version = "2.3.0", features = ["serde"] }
itertools = "0.9.0"
lazy_static = "1.4"
log = "0.4.8"
rand = "0.6"
sha2 = { version = "0.8.1", default-features = false }
smallvec = { version = "1.4", features = ["write"] }

[features]
default = ["std", "u64_backend"]
# re-exports of various dependency features
std = ["bitvec/std", "ed25519-dalek/std", "sha2/std"]
alloc = ["bitvec/alloc", "ed25519-dalek/alloc"]
nightly = ["ed25519-dalek/nightly"]
asm = ["ed25519-dalek/asm", "sha2/asm"]
yolocrypto = ["ed25519-dalek/yolocrypto"]
u64_backend = ["ed25519-dalek/u64_backend"]
u32_backend = ["ed25519-dalek/u32_backend"]
avx2_backend = ["ed25519-dalek/avx2_backend"]
