[package]
name = "yggy"
version = "0.0.0-alpha.1"
edition = "2018"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
description = "An end-to-end encrypted IPv6 mesh network"
readme = "README.md"
repository = "https://github.com/datalove-app/yggy"
keywords = ["cryptography", "networking", "p2p"]
categories = ["cryptography"]
license = "LGPL-3.0" # FIXME

[lib]
name = "yggy"
path = "src/lib.rs"

# TODO? restrict binary building to linux/mac/windows?
[[bin]]
name = "yggyd"
path = "daemon/main.rs"

[[bin]]
name = "yggyctl"
path = "cmd/main.rs"

[[bin]]
name = "yggysim"
path = "simulator/main.rs"

[workspace]
members = [
  "core"
]

[dependencies]
# main
anyhow = "1.0"
async-trait = "0.1"
etherparse = "0.9"
futures-locks = { version = "0.5.1-pre", default-features = false }
libtor = { version = "43.5.1", optional = true }
smol = "0.1"  # TODO: replace with a generic library?
utuntap = "0.2.4"
yggy-core = { path = "./core", default-features = false }
# helper, util
async-log = "2.0.0"
lazy_static = "1.4"
log = "0.4"
stream-cancel = "0.6"

[features]
default = ["std", "u64_backend"]
# library features
tor = ["libtor", "yggy-core/tor"] # starts a TOR client + relay, allowing some/all link traffic to be routed over TOR
# async features
runtime-async-std = ["yggy-core/runtime-async-std"]
runtime-tokio = ["yggy-core/runtime-tokio"]
# re-exported features also used by library
std = ["yggy-core/std"]
alloc = ["yggy-core/alloc"]
nightly = ["yggy-core/nightly"]
# re-exported features of various dependencies
asm = ["yggy-core/asm"]
u32_backend = ["yggy-core/u32_backend"]
u64_backend = ["yggy-core/u64_backend"]

# [target.'cfg(not(target_arch="arm"))'.dependencies]
# ring = "0.16"

# [target.'cfg(not(any(target_os="windows", target_os="ios", target_os="android")))'.dependencies]
# chrono = "0.4"
# daemonize = "0.4.1"
# clap = { version = "2.33", default-features=false, features = ["suggestions"] }

# [target.'cfg(target_os="android")'.dependencies]
# jni = "0.10"

[patch.crates-io]
futures-locks = { git = "https://github.com/asomers/futures-locks" }
