[package]
name = "yggy-core"
version = "0.0.0-alpha.1"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
edition = "2018"

[dependencies]
# main
anyhow = "1.0"
async-trait = "0.1"
ed25519-dalek = { version = "1.0.0-pre.4", features = ["serde"] }
futures = { version = "0.3", default-features = false }
futures_codec = "0.4"
packet = "0.1.3"
rand = "0.7"
rand_chacha = "0.2"
serde = { version = "1.0", features = ["derive", "rc"] }
sha2 = { version = "0.9", default-features = false }
thiserror = "1.0"
x25519-dalek = { version = "0.6", features = ["serde"] }
xactor =  { version = "0.7" } # TODO: setup runtime feature
# helper, util
# async-log = "2.0.0"
bitvec = { version = "0.17.4", default-features = false }
derive_more = "0.99"
itertools = "0.9.0"
lazy_static = "1.4"
log = "0.4"
rental = "0.5"
smallvec = { version = "1.4", features = ["write"] }
zerocopy = "0.3"

[features]
default = ["std", "u64_backend"]
# library features
tor = []
# async features
runtime-async-std = ["xactor/runtime-async-std"]
runtime-tokio = ["xactor/runtime-tokio"]
# re-exported features also used by library
std = ["bitvec/std", "ed25519-dalek/std", "futures/std", "sha2/std", "x25519-dalek/std"]
alloc = ["bitvec/alloc", "ed25519-dalek/alloc", "rand/alloc"]
nightly = ["ed25519-dalek/nightly", "rand/nightly", "x25519-dalek/nightly"]
# re-exported features of various dependencies
asm = ["ed25519-dalek/asm", "sha2/asm"]
u32_backend = ["ed25519-dalek/u32_backend", "x25519-dalek/u32_backend"]
u64_backend = ["ed25519-dalek/u64_backend", "x25519-dalek/u64_backend"]
